# capstone-code

./: .envrc  .gitignore  CMakeLists.txt  Doxyfile  README.md  default.nix  flake.nix  parameter_template.toml  pixi.toml  result  todo.md
.direnv/: flake-profile-1-link
analyze/: Untitled.ipynb  compute_observables.py  finite_size_plots.py  generate_critical_exponents.py  generate_lattice_video.py  generate_observable_plots.py  generate_video.py  ising_animation_10.html  lattice_difference.py  lattice_plots.py  observables_plots.py  playground.ipynb  plot_ising_grid.ipynb  rg_plots.py
projects/demo/: config.toml  parameters.toml
src/: CMakeLists.txt  ising.cpp  main.cpp  random.cpp  random.h
src/lattice/: doubleLattice.cpp  doubleLattice.h  intLattice.cpp  intLattice.h  lattice.cpp  lattice.h  lattice.tpp
src/models/: ising.cpp  ising.h  model.cpp  model.h  model.tpp  modelBase.h  potts.cpp  potts.h  xy.cpp  xy.h  xy_mag.cpp_
src/simulation/: observables.h  simulation.cpp  simulation.h  simulationParameters.h
utils/: h5_utils.py  new_project.py  new_project_sample.py
